<resources>
    <string name="app_name">DateMe</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_profile">Profile</string>
    <string name="title_explore">Explore</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_likes">Likes</string>
    <string name="title_chat">Chat</string>
    <string name="describe_yourself">Mô tả bản thân</string>
    <string name="add_image">Thêm hình ảnh</string>
    <string name="describe">Mô tả</string>
    <string name="school">Trường</string>
    <string name="organization">Cơ quan</string>
    <string name="job">Công việc</string>
    <string name="hobby">Sở thích</string>
    <string name="format_of_date">dd/mm/yyyy</string>
    <string name="birthday">Ngày sinh</string>
    <string name="gender">Giới tính</string>
    <string name="MALE">NAM</string>
    <string name="FEMALE">NỮ</string>
    <string name="other">Khác</string>
    <string name="advance_setting">Thiết lập nâng cao</string>
    <string name="no_show_age">Không hiển thị độ tuổi</string>
    <string name="no_show_location">Không hiển thị vị trí</string>
    <string name="image_filter">Image Filter</string>
    <string name="image_replay">Image Replay</string>
    <string name="image_ignore_profile">Image igrone profile</string>
    <string name="image_super_like">Image Super Like</string>
    <string name="image_like_profile">Image Like Profile</string>
    <string name="image_boost_profile">Image Boost Profile</string>
    <string name="image_setting">Image Setting</string>
    <string name="image_show_my_profile">Image show my profile</string>
    <string name="image_edit_profile">Image edit profile</string>
    <string name="SETTING">THIẾT LẬP</string>
    <string name="MY_PROFILE">HỒ SƠ CỦA TÔI</string>
    <string name="EDIT">CHỈNH SỬA</string>
    <string name="fake_name_age">Selena Dương, 22</string>
    <string name="fake_school">Trường Đại học Khoa học Tự nhiên</string>
    <string name="upgrade_account">Nâng cấp tài khoản</string>
    <string name="more_prominent_when_authenticating_your_account">Nỗi bật hơn khi chứng thực hình ảnh!</string>
    <string name="not_important">Not important</string>
    <string name="image_profile">Image Profile</string>
    <string name="fake_distance_short">2.1 Km</string>
    <string name="away_km">Cách xa %1$d Km</string>
    <string name="fake_distance">Cách xa 10Km</string>
    <string name="fake_hobby">Sở thích: Cầu lông, bóng đá.</string>
    <string name="image_come_back_profile_swiped">Image come back Profile Swiped</string>
    <string name="fake_description">Tấm ảnh chụp san hô lòng biển, vốn méo mó và mờ mịt vì ống kính phải nhìn xuyên làn nước, bỗng hiện ra sặc sỡ bất ngờ.</string>
    <string name="share_profile_of">CHIA SẺ HỒ SƠ CỦA %1$s</string>
    <string name="report_of">BÁO CÁO %1$s</string>
    <string name="setting_display_object">Thiết lập hiển thị đối tượng</string>
    <string name="display">Hiển thị</string>
    <string name="ALL">ALL</string>
    <string name="age">Độ tuổi</string>
    <string name="fake_range_age">18 - 22</string>
    <string name="location">Địa điểm</string>
    <string name="my_location">Địa điểm hiện tại của tôi</string>
    <string name="add_new_location">Thêm địa điểm mới</string>
    <string name="global">Toàn cầu</string>
    <string name="range">Phạm vi</string>
    <string name="notification">Thông báo</string>
    <string name="show_me">Hiển thị tôi</string>
    <string name="setting_app">Thiết lập ứng dụng</string>
    <string name="logout">Đăng xuất</string>
    <string name="delete_account">Xóa tài khoản</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="no_profiles">NO PROFILES</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="it_s_a_match">It\'s a Match!</string>
    <string name="message_matching">You and %1$s have liked each other!</string>
    <string name="send_a_message">Send a message</string>
    <string name="keep_swiping">keep swiping</string>
    <string name="messages">Messages</string>
    <string name="title_activity_chatting">ChattingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="video_call">Video Call</string>
    <string name="report">Report</string>
    <string name="matched_with">Bạn match với <b>%1$s</b></string>
    <string name="fake_matching_day">15/06/2020</string>
    <string name="send_hello">Hãy gửi lời chào tới <b>%1$s</b> nào!</string>
</resources>