<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_black_person_24"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/ic_black_explore_24"
        android:title="@string/title_explore" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_black_dashboard_24"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_likes"
        android:icon="@drawable/ic_like_black_24"
        android:title="@string/title_likes" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_message_black_24"
        android:title="@string/title_chat" />

</menu>