<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <com.yuyakaido.android.cardstackview.CardStackView
        android:id="@+id/card_swipe_stack"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_filter"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/img_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/round_button_gray"
        android:clickable="true"
        android:contentDescription="@string/image_filter"
        android:focusable="true"
        android:padding="6dp"
        android:src="@drawable/ic_filter_list_black_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_replay"
        style="@style/btnWhiteTransparent"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/image_replay"
        android:src="@drawable/ic_replay_green_24"
        android:transitionName="img_replay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/img_cancel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/card_swipe_stack"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/img_cancel"
        style="@style/btnWhiteTransparent"
        android:contentDescription="@string/image_ignore_profile"
        android:elevation="10dp"
        android:src="@drawable/ic_cancel_pink_24"
        android:transitionName="img_cancel"
        app:layout_constraintBottom_toBottomOf="@+id/img_replay"
        app:layout_constraintEnd_toStartOf="@+id/img_star"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/img_replay"
        app:layout_constraintTop_toTopOf="@+id/img_replay" />

    <ImageView
        android:id="@+id/img_star"
        style="@style/btnWhiteTransparent"
        android:contentDescription="@string/image_super_like"
        android:src="@drawable/ic_star_blue_36"
        android:transitionName="img_star"
        app:layout_constraintBottom_toBottomOf="@+id/img_replay"
        app:layout_constraintEnd_toStartOf="@+id/img_match"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/img_cancel"
        app:layout_constraintTop_toTopOf="@+id/img_replay"
        app:layout_constraintVertical_bias="0.461" />

    <ImageView
        android:id="@+id/img_match"
        style="@style/btnWhiteTransparent"
        android:contentDescription="@string/image_like_profile"
        android:src="@drawable/ic_favorite_pink_48"
        android:transitionName="img_match"
        app:layout_constraintBottom_toBottomOf="@+id/img_cancel"
        app:layout_constraintEnd_toStartOf="@+id/img_speed"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/img_star"
        app:layout_constraintTop_toTopOf="@+id/img_cancel"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/img_speed"
        style="@style/btnWhiteTransparent"
        android:contentDescription="@string/image_boost_profile"
        android:src="@drawable/ic_flash_on_green_24"
        android:transitionName="img_speed"
        app:layout_constraintBottom_toBottomOf="@+id/img_replay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_match"
        app:layout_constraintTop_toTopOf="@+id/img_replay"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/prg_loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/card_swipe_stack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/card_swipe_stack" />


</androidx.constraintlayout.widget.ConstraintLayout>